update testimonial layout 4 image alignment issue

--- a/assets/scss/elements/testimonial.scss
+++ b/assets/scss/elements/testimonial.scss
@@ -66,7 +66,7 @@
 		}
 		.wk-card-media-bottom{
 			padding-bottom:20px;
-			img{width:15%; padding:3px;}
+			img{width:15%; padding:3px; display:inline-block;}
 		}
 		.wk-card-body{
 			.wk-text-normal{
@@ -117,7 +117,7 @@
 		
 		.wk-card-media-top{
 			padding-bottom:30px;
-			img{width:15%; padding:3px;}
+			img{width:15%; padding:3px; display:inline-block;}
 		}
 		.wk-card-media-bottom{
 			padding-bottom:20px;
